[package]
name = "lexical-benchmark"
version = "0.0.1"
authors = ["Alex Huszagh <ahuszagh@gmail.com>"]
publish = false

[dependencies.lexical-core]
path = "../../lexical-core"
default-features = false
features = []

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
lazy_static = "1"
serde_json = "1.0"

[features]
default = ["parse_floats", "lemire", "no_alloc", "std"]

# SUBCRATES
# ---------
parse_floats = ["lexical-core/parse_floats"]
parse_integers = ["lexical-core/parse_integers"]
write_floats = ["lexical-core/write_floats"]
write_integers = ["lexical-core/write_integers"]

# FEATURES
# --------
no_alloc = ["lexical-core/no_alloc"]
format = ["lexical-core/format"]
power_of_two = ["lexical-core/power_of_two"]
radix = ["lexical-core/radix"]
rounding = ["lexical-core/rounding"]
ryu = ["lexical-core/ryu"]
std = ["lexical-core/std"]
lemire = ["lexical-core/lemire"]

[[bench]]
name = "atof"
path = "benches/atof.rs"
harness = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
lto = true
